fix: border-radius on mobile view

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -25,6 +25,18 @@
         flex-direction: row;
     }
 
+    .cards-container-form {
+        border-radius: 10px;
+    }
+
+    .card-1 {
+        border-radius: 10px 0 0 10px;
+    }
+
+    .card-3 {
+        border-radius: 0 10px 10px 0;
+    }
+
     .para-margin {
         margin-bottom: var(--second-level-space);
     }
