--- a/css/main.css
+++ b/css/main.css
@@ -29,20 +29,20 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.card-1 {
+    border-radius: 10px 10px 0 0;
+}
+
+.card-3 {
+    border-radius: 0 0 10px 10px;
+}
+
 .card {
     padding: var(--first-level-space);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-}
-
-.card-1 {
-    border-radius: 10px 0 0 10px;
-}
-
-.card-3 {
-    border-radius: 0 10px 10px 0;
 }
 
 .card-color-1 {
